Some major issues has been fixed & bonus section has been added. Thus Assignment has finished before the final deadline

--- a/index.html
+++ b/index.html
@@ -259,9 +259,8 @@
                             <i class="fa-regular fa-heart"></i>
                             <h6 class="text-base font-medium text-[#13131880]">220</h6>
                         </div>
-                        <h3 class="text-[#131318] text-xl font-extrabold">World Cup Flags Hockey</h3>
-                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag
-                            displayed during matches and events.</p>
+                        <h3 class="text-[#131318] text-xl font-extrabold">World Cup Hockey Tournament</h3>
+                        <p class="text-[#13131899] text-base font-medium">Thrilling Comebacks: Unforgettable moments in sports history that left fans on the edge.</p>
                         <div class="flex gap-3">
                             <h5 class="text-[#FF4240] text-base font-extrabold">Price - $12.00</h5>
                             <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
@@ -283,8 +282,7 @@
                             <h6 class="text-base font-medium text-[#13131880]">300</h6>
                         </div>
                         <h3 class="text-[#131318] text-xl font-extrabold">Cap For Hockeys</h3>
-                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag
-                            displayed during matches and events.</p>
+                        <p class="text-[#13131899] text-base font-medium">Exploring innovative workouts and training methods reshaping the sports and wellness landscape</p>
                         <div class="flex gap-3">
                             <h5 class="text-[#FF4240] text-base font-extrabold">Price - $25.00</h5>
                             <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
@@ -306,8 +304,7 @@
                             <h6 class="text-base font-medium text-[#13131880]">150</h6>
                         </div>
                         <h3 class="text-[#131318] text-xl font-extrabold">World Hockey Leagues</h3>
-                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag
-                            displayed during matches and events.</p>
+                        <p class="text-[#13131899] text-base font-medium">How advancements in sports tech are revolutionizing training, performance, and analysis.</p>
                         <div class="flex gap-3">
                             <h5 class="text-[#FF4240] text-base font-extrabold">Price - $120.00</h5>
                             <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
@@ -329,8 +326,7 @@
                             <h6 class="text-base font-medium text-[#13131880]">180</h6>
                         </div>
                         <h3 class="text-[#131318] text-xl font-extrabold">World Cup Flags Football</h3>
-                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag
-                            displayed during matches and events.</p>
+                        <p class="text-[#13131899] text-base font-medium">Inspiring stories of perseverance and unexpected victories that captivated the world of sports.</p>
                         <div class="flex gap-3">
                             <h5 class="text-[#FF4240] text-base font-extrabold">Price - $29.00</h5>
                             <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
@@ -365,6 +361,82 @@
         </section>
         <!-- Section 4 End -->
         <!-- Section 5 Start -->
+        <Section>
+            <hr class="my-12 border-2 border-dashed border-[#13131833]">
+            <div class="text-center gap-6 flex flex-col">
+                <h1 class="font-extrabold text-4xl">Clients Question</h1>
+                <p class="text-[#0d0d128a] font-medium text-base"> If you have a specific client question in mind or need assistance in formulating responses, please provide more details or the specific question.</p>
+            </div>
+            <hr class="my-12 border-2 border-dashed border-[#13131833]">
+            <div class="flex gap-8 flex-col lg:flex-row">
+                <div class="p-4 flex justify-center items-center">
+                    <img src="images/11.png" alt="">
+                </div>
+                <div>
+                    <div class="collapse collapse-plus bg-[#FFF]">
+                        <input type="radio" name="my-accordion-3" checked="checked" /> 
+                        <div class="collapse-title text-xl font-extrabold">
+                            Our Equipment
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Explore the excellence of our cutting-edge equipment designed for optimal performance and unmatched durability.</p>
+                        </div>
+                      </div>
+                      <hr class="border-1 border-solid border-[#13131833]">
+                      <div class="collapse collapse-plus bg-[#FFF]">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-extrabold">
+                            Hockey Training
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Train with experienced coaches dedicated to enhancing your skills and game strategies.</p>
+                        </div>
+                      </div>
+                      <hr class="border-1 border-solid border-[#13131833]">
+                      <div class="collapse collapse-plus bg-[#FFF]">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-extrabold">
+                            Private Lessons
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Invest in yourself with private lessons tailored to your unique aspirations. Elevate your skills and achieve your goals.</p>
+                        </div>
+                      </div>
+                      <hr class="border-1 border-solid border-[#13131833]">
+                      <div class="collapse collapse-plus bg-[#FFF]">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-extrabold">
+                            Ski Touring
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Embark on a thrilling ski touring adventure, blending adrenaline and serenity in the snowy wilderness.</p>
+                        </div>
+                      </div>
+                      <hr class="border-1 border-solid border-[#13131833]">
+                      <div class="collapse collapse-plus bg-[#FFF]">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-extrabold">
+                            Booking
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Book your next adventure effortlessly and embark on a journey filled with excitement and memorable experiences.</p>
+                        </div>
+                      </div>
+                      <hr class="border-1 border-solid border-[#13131833]">
+                      <div class="collapse collapse-plus bg-[#FFF]">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-extrabold">
+                            Pricings
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Experience the convenience and fairness of our pricing model as you embark on your next adventure.</p>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </Section>
+        <!-- Section 5 End -->
+        <!-- Section 6 Start -->
         <Section>
             <hr class="my-12 border-2 border-dashed border-[#13131833]">
             <div class="text-center gap-6 flex flex-col">
@@ -428,13 +500,13 @@
                 </div>
             </div>
         </Section>
-        <!-- Section 5 End -->
+        <!-- Section 6 End -->
     </main>
     <!-- Footer Section -->
-    <footer class="footer p-10 bg-[#131318] text-neutral-content grid grid-cols-1">
-        <div class="flex flex-col gap-4 flex-1">
+    <footer class="footer p-10 bg-[#131318] text-neutral-content flex flex-col lg:flex-row justify-center items-center">
+        <div class="flex flex-col gap-4 flex-1 justify-center items-center lg:justify-start lg:items-start">
             <h2 class="text-2xl font-extrabold">Get In Touch</h2>
-            <p class="text-base font-medium">Have questions or need assistance? Feel free to get in touch with us.
+            <p class="text-base font-medium">Have questions ? Feel free to get in touch with us.
             </p>
             <div class="flex gap-2">
                 <i class="fa-regular fa-envelope text-[#FF4240]"></i>
@@ -445,30 +517,38 @@
                 <h6>(+62) 123-321-543</h6>
             </div>
         </div>
-        <div class="grid grid-cols-2 lg:grid-cols-3 gap-y-12">
-            <nav class="grid grid-cols-1 gap-4">
-                <header class="footer-title">Company</header>
-                <a class="link link-hover">About us</a>
-                <a class="link link-hover">Leadership</a>
-                <a class="link link-hover">Careers</a>
-                <a class="link link-hover">News & Article</a>
-                <a class="link link-hover">Legal Notice</a>
-            </nav>
-            <nav class="grid grid-cols-1 gap-4">
-                <header class="footer-title">Support</header>
-                <a class="link link-hover">Help Center</a>
-                <a class="link link-hover">FAQ</a>
-                <a class="link link-hover">Ticket Support</a>
-                <a class="link link-hover">Contact Us</a>
-            </nav>
-            <nav class="grid grid-cols-1 gap-4 mx-9">
-                <header class="footer-title">Services</header>
-                <a class="link link-hover">Academy</a>
-                <a class="link link-hover">Group Lesson</a>
-                <a class="link link-hover">Private Lesson</a>
-                <a class="link link-hover">Hockeys for kids</a>
-                <a class="link link-hover">Hockeys for adults</a>
-            </nav>
+        <div class="flex flex-col lg:flex-row justify-center items-center gap-6 lg:justify-start lg:gap-x-32">
+            <div class="flex gap-6 lg:gap-x-32">
+                <div class="text-center lg:text-left">
+                    <nav class="flex flex-col gap-4">
+                    <header class="footer-title">Company</header>
+                    <a class="link link-hover">About us</a>
+                    <a class="link link-hover">Leadership</a>
+                    <a class="link link-hover">Careers</a>
+                    <a class="link link-hover">News & Article</a>
+                    <a class="link link-hover">Legal Notice</a>
+                    </nav>
+                </div>
+                <div class="text-center lg:text-left">
+                    <nav class="flex flex-col gap-4">
+                        <header class="footer-title">Support</header>
+                        <a class="link link-hover">Help Center</a>
+                        <a class="link link-hover">FAQ</a>
+                        <a class="link link-hover">Ticket Support</a>
+                        <a class="link link-hover">Contact Us</a>
+                    </nav>
+                </div>
+            </div>
+            <div class="text-center lg:text-left">
+                <nav class="flex flex-col gap-4">
+                    <header class="footer-title">Services</header>
+                    <a class="link link-hover">Academy</a>
+                    <a class="link link-hover">Group Lesson</a>
+                    <a class="link link-hover">Private Lesson</a>
+                    <a class="link link-hover">Hockeys for kids</a>
+                    <a class="link link-hover">Hockeys for adults</a>
+                </nav>
+            </div>
         </div>
     </footer>
 </body>
